[package]
name = "action-change-filter"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.110", features=["derive"]}
serde_json = "1.0.53"
regex = "1"
itertools = "0.9"

[dev-dependencies]
uuid = {version = "0.8", features=["v4"]}
